<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@drawable/bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="36dp"
        android:paddingBottom="36dp">
        <TextView
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="#AE2AB3"
            android:textSize="30sp"
            android:text="@string/welcome_back"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter your details to Login"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            />
        <androidx.cardview.widget.CardView
            android:backgroundTint="#555555"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="22dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="22dp">
            <LinearLayout
                android:background="@drawable/smoked_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="72dp"
                    android:text="@string/phone_no"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    />
                <EditText
                    android:background="@color/transparent"
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="+91XXXXXXXXXX"
                    android:textColor="@color/white"
                    android:textColorHint="#BFBFBF"
                    android:textSize="24sp"
                    android:inputType="textEmailAddress" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    />
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/password"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    />
                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@color/transparent"
                    android:hint="..............."
                    android:textColorHint="#BFBFBF"
                    android:textColor="@color/white"
                    android:textSize="24sp"

                    android:inputType="textPassword" />
                <TextView
                    android:textStyle="bold"
                    android:id="@+id/forget_password"
                    android:text="Forget Password"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:textSize="14sp"
                    android:textColor="#8BC34A"
                    />
                <TextView
                    android:id="@+id/txt_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:textSize="12sp"
                    android:textColor="@color/red"
                    />
                <Button
                    android:layout_marginTop="17dp"
                    android:id="@+id/btn_log"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2E0D2F"
                    android:textColor="@color/white"
                    android:text="@string/login"
                    />
                <TextView
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:textAlignment="center"
                    android:textColor="#8BC34A"
                    android:layout_gravity="center"
                    android:text="@string/don_t_have_an_account_register"/>
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progress_bar"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>